--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@ pre{
 
 h3{
     border-left:10px solid #2B3A42;
-    font-size:10em;
+    font-size:30px;
     color:#000;
     padding:0 10px;
     background:rgba(0,0,0,0.1);
