--- a/index.css
+++ b/index.css
@@ -37,7 +37,7 @@ h3{
     color:#000;
     padding:0 10px;
     background:rgba(0,0,0,0.1);
-    display:inline-block;
+    dddddisplay:inline-block;
 }
 
 mark{
